--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-    background-image: url(../resources/background-img.png);
+    background-image: url(resources/background-img.png);
     background-size: cover;
     color: #fff;
     font-family: 'Inter', sans-serif;
