css removed / from urls routes

--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 
 html {
-    background: url(../resources/background-img.png) no-repeat center center fixed; 
+    background: url(resources/background-img.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
