--- a/main.css
+++ b/main.css
@@ -169,10 +169,11 @@ li h6 {
 
 .cards {
     min-height: 20.625rem;
-    max-width: 16rem;
-    min-width: 16rem;
+    max-width: 15rem;
+    min-width: 15rem;
     border-radius: 6px;
     background: rgba(49, 50, 81, 0.8);
+    padding: .75rem;
 }
 
 .active-card {
@@ -191,7 +192,6 @@ li h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .75rem .75rem 0 .75rem;
 }
 
 .cards-heading h3 {
@@ -209,7 +209,7 @@ li h6 {
 }
 
 .card-description {
-    padding: 0 .75rem .75rem .75rem;
+    padding: 0 0 .75rem 0;
     margin: 0;
     font-weight: 400;
 }
@@ -229,7 +229,6 @@ li h6 {
 .cards-points {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 .75rem;
     justify-content: space-evenly;
     gap: .5rem;
     row-gap: .75rem;
@@ -270,4 +269,20 @@ li h6 {
 
 .points_bottom-right {
     align-self: end;
+}
+
+.check-story {
+    margin-top: .75rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: .875rem;
+}
+
+.inactive-cards {
+    color: rgba(255, 255, 255, .5);
 }
