--- a/main.css
+++ b/main.css
@@ -294,11 +294,33 @@ li h6 {
 
 .inactive-cards {
     color: rgba(255, 255, 255, .5);
+    border: solid 2px rgba(49, 50, 81, 0.8);
+    display: flex;
+    flex-direction: column;
 }
-
-
-
 
 
 /* Boolean Voting Buttons*/
 
+.btn-boolean {
+    height: 2.75rem;
+    width: 100%;
+    background: #585A81;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex-direction: column;
+    margin: auto 0;
+}
+
+.inactive-cards .check-story {
+    color: rgba(255, 255, 255, .5);
+    cursor:not-allowed;
+}
